--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <img id="rick" src="sharingan2.png" alt="" />
       <img id="zoro" src="zoro.png" alt="" />
       <img id="greenring" src="green latren.png" alt="" />
+      <img id="dragon" src="dragonz.png" alt="" />
     </main>
   </body>
 </html>
