--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <img id="zoro" src="zoro.png" alt="" />
       <img id="greenring" src="green latren.png" alt="" />
       <img id="dragon" src="dragonz.png" alt="" />
+      <img id="gdragon" src="dragon.png" alt="" />
     </main>
   </body>
 </html>
